--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -262,8 +262,8 @@
         android:id="@+id/nav_view"
         android:layout_width="340dp"
         android:layout_height="match_parent"
-        android:background="@color/primaryBackground"
         android:layout_gravity="start"
+        android:background="@color/primaryBackground"
         app:itemTextColor="#000000">
 
         <androidx.core.widget.NestedScrollView
@@ -379,6 +379,40 @@
 
                         </com.google.android.material.card.MaterialCardView>
                         <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/rates_and_inv_card"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/nav_cards_height"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginEnd="50dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:cardCornerRadius="10dp"
+                            app:strokeColor="@color/primaryBackground"
+                            app:cardBackgroundColor="@color/primaryBackground">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+                                <ImageView
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:src="@drawable/svg_rates"
+                                    android:layout_marginVertical="15dp"
+                                    android:layout_marginStart="9dp"
+                                    app:tint="@color/lightBlack"/>
+                                <TextView
+                                    android:id="@+id/rates_and_inv_txt"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Rates and Inventory"
+                                    android:fontFamily="@font/roboto_medium"
+                                    android:textColor="@color/textColor"
+                                    android:layout_marginStart="10dp"
+                                    android:textSize="@dimen/H4" />
+                            </LinearLayout>
+
+                        </com.google.android.material.card.MaterialCardView>
+                        <com.google.android.material.card.MaterialCardView
                             android:id="@+id/rates_card"
                             android:layout_width="match_parent"
                             android:layout_marginEnd="50dp"
@@ -410,7 +444,7 @@
                                     app:layout_constraintVertical_bias="0"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="6dp"
-                                    android:text="Rates and Inventory"
+                                    android:text="Room and Rates"
                                     app:layout_constraintStart_toEndOf="@id/img_rate"
                                     app:layout_constraintTop_toTopOf="@id/img_rate"
                                     app:layout_constraintBottom_toBottomOf="@id/img_rate"
