--- a/app/src/main/res/layout/fragment_view_properties.xml
+++ b/app/src/main/res/layout/fragment_view_properties.xml
@@ -171,10 +171,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             style="@style/CardViewTheme"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="20dp"
             android:visibility="gone"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/llView"
             app:layout_constraintStart_toStartOf="@id/searchCard"
             app:layout_constraintTop_toBottomOf="@id/searchCard">
@@ -298,9 +299,10 @@
             android:layout_height="wrap_content"
             style="@style/CardViewTheme"
             android:visibility="visible"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="20dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/llView"
             app:layout_constraintTop_toBottomOf="@id/searchCard"
             app:layout_constraintStart_toStartOf="@id/searchCard">
