--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -100,8 +100,42 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                         </com.google.android.material.card.MaterialCardView>
-
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/img_notify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="7dp"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintEnd_toStartOf="@id/end_card"
+                    app:layout_constraintTop_toTopOf="@id/end_card"
+                    app:layout_constraintBottom_toBottomOf="@id/end_card">
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/svg_notify"
+                    android:padding="9dp"
+                    android:background="#2D9CDB26"/>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@id/img_notify"
+                    app:layout_constraintBottom_toTopOf="@id/img_notify"
+                    app:layout_constraintEnd_toEndOf="@id/img_notify"
+                    app:layout_constraintStart_toEndOf="@id/img_notify"
+                    app:cardCornerRadius="11dp"
+                    app:cardBackgroundColor="#2196F3">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/H6"
+                        android:textColor="@color/white"
+                        android:layout_marginHorizontal="4dp"
+                        android:layout_marginVertical="3dp"
+                        android:text="20"/>
+                </androidx.cardview.widget.CardView>
                  <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/end_card"
                             android:layout_width="wrap_content"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
