--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
 
     <color name="primary">#ACD037</color>
     <color name="secondary">#272A3D</color>
@@ -22,5 +23,6 @@
     <color name="grey20">#D3D3D3</color>
     <color name="grey30">#C0C0C0</color>
     <color name="grey40">#A9A9A9</color>
+    <color name="dark_grey">#A7AFC2</color>
 
 </resources>
