--- a/app/src/main/res/layout/activity_final_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_final_onboarding_screen.xml
@@ -175,12 +175,15 @@
                             android:textColor="@color/black"
                             android:textSize="@dimen/H4" />
 
-                        <com.google.android.material.card.MaterialCardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/goToDash"
                             android:layout_width="200dp"
-                            android:layout_height="50dp"
+                            android:layout_height="45dp"
+                            style="@style/CardViewTheme"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp"
                             android:layout_marginTop="20dp"
-                            android:backgroundTint="@color/secondary"
+                            app:cardBackgroundColor="@color/black"
                             android:paddingBottom="15dp">
 
                             <TextView
@@ -193,7 +196,7 @@
                                 android:textFontWeight="500"
                                 android:textSize="@dimen/H5" />
 
-                        </com.google.android.material.card.MaterialCardView>
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
