--- a/app/src/main/res/layout/activity_first_on_boarding_screen.xml
+++ b/app/src/main/res/layout/activity_first_on_boarding_screen.xml
@@ -196,7 +196,7 @@
                     android:transitionName="Btn"
                     android:layout_marginEnd="60dp"
                     android:layout_marginBottom="40dp"
-                    app:cardBackgroundColor="@color/secondary"
+                    app:cardBackgroundColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
