--- a/app/src/main/res/layout/activity_second_chain_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_chain_onboarding.xml
@@ -368,7 +368,7 @@
                         android:layout_width="170dp"
                         android:layout_height="@dimen/button_height"
                         android:layout_marginBottom="40dp"
-                        android:backgroundTint="@color/secondary"
+                        android:backgroundTint="@color/black"
                         android:transitionName="Btn"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/cardImg">
