--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -420,12 +420,15 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.card.MaterialCardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/card_SingleNext"
                         android:layout_width="170dp"
                         android:layout_height="@dimen/button_height"
+                        style="@style/CardViewTheme"
+                        app:cardElevation="4dp"
+                        app:cardCornerRadius="10dp"
                         android:transitionName="Btn"
-                        android:backgroundTint="@color/secondary"
+                        app:cardBackgroundColor="@color/black"
                         android:layout_marginBottom="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@id/currency_layout">
@@ -439,7 +442,7 @@
                             android:layout_gravity="center"
                             android:textSize="@dimen/H5"/>
 
-                    </com.google.android.material.card.MaterialCardView>
+                    </androidx.cardview.widget.CardView>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
