--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -235,17 +235,20 @@
             app:layout_constraintTop_toBottomOf="@id/passwordLayout"
             app:layout_constraintStart_toStartOf="@id/passwordLayout"/>
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/card_createAccount"
             android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
+            style="@style/CardViewTheme"
+            app:cardElevation="4dp"
             android:transitionName="Btn"
+            app:cardCornerRadius="10dp"
             app:layout_constraintTop_toBottomOf="@+id/subHeadingTerm"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
-            android:backgroundTint="@color/secondary"
+            android:backgroundTint="@color/black"
             >
 
             <TextView
@@ -257,7 +260,7 @@
                 android:layout_gravity="center"
                 android:textSize="@dimen/H4" />
 
-        </com.google.android.material.card.MaterialCardView>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
