--- a/app/src/main/res/layout/item_properties.xml
+++ b/app/src/main/res/layout/item_properties.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/roomType"
+                android:id="@+id/propertyName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary"
@@ -38,7 +38,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/ll5"/>
             <TextView
-                android:id="@+id/cityName"
+                android:id="@+id/location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/secondary"
@@ -51,7 +51,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/ll5"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/roomType"/>
+                app:layout_constraintTop_toBottomOf="@id/propertyName"/>
 
             <LinearLayout
                 android:id="@+id/ll5"
@@ -61,8 +61,8 @@
                 android:layout_marginEnd="9dp"
                 android:gravity="center_vertical"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/roomType"
-                app:layout_constraintBottom_toBottomOf="@id/cityName">
+                app:layout_constraintTop_toTopOf="@id/propertyName"
+                app:layout_constraintBottom_toBottomOf="@id/location">
 
                 <TextView
                     android:layout_width="match_parent"
