--- a/app/src/main/res/layout/item_properties_2.xml
+++ b/app/src/main/res/layout/item_properties_2.xml
@@ -21,12 +21,12 @@
             app:layout_constraintBottom_toBottomOf="@id/ll1"
             app:shapeAppearance="@style/RoundedCornerImage_10"
             android:src="@color/unselectedBackground"
-            app:layout_constraintTop_toTopOf="@id/roomType"
+            app:layout_constraintTop_toTopOf="@id/propertyName"
             app:layout_constraintStart_toStartOf="parent"/>
 
 
         <TextView
-            android:id="@+id/roomType"
+            android:id="@+id/propertyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/secondary"
@@ -41,7 +41,7 @@
             />
 
         <TextView
-            android:id="@+id/cityName"
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
@@ -50,8 +50,8 @@
             android:text="@string/next"
             android:textColor="@color/secondary"
             android:textSize="@dimen/H6"
-            app:layout_constraintStart_toEndOf="@id/roomType"
-            app:layout_constraintBottom_toBottomOf="@id/roomType" />
+            app:layout_constraintStart_toEndOf="@id/propertyName"
+            app:layout_constraintBottom_toBottomOf="@id/propertyName" />
 
         <LinearLayout
             android:id="@+id/ll1"
@@ -61,9 +61,9 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/roomType"
+            app:layout_constraintStart_toStartOf="@id/propertyName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/roomType">
+            app:layout_constraintTop_toBottomOf="@id/propertyName">
 
             <LinearLayout
                 android:layout_width="match_parent"
